--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
     <nav class="nav-options">
         <ul>
-            <li><a href="" class="nav-option">About Neo</a></li>
-            <li><a href="" class="nav-option">Play Dates</a></li>
-            <li><a href="" class="nav-option">Want to adopt a cute dog too?</a></li>
+            <li><a href="" class="nav-option" id="about-link">About Neo</a></li>
+            <li><a href="" class="nav-option" id="dates-link">Play Dates</a></li>
         </ul>
 
     </nav>
@@ -27,6 +26,18 @@
         <ul class="blog-posts-list">
 
         </ul>
+
+        <h2 id="about-neo" tabindex="1">About Neo</h2>
+        <p>
+            Neo is a little puppy we adopted in October. He looks like a Labrador, but he is actually
+            a mixed breed.
+        </p>
+
+        <h2 id="play-dates" tabindex="2">Play Dates</h2>
+        <p>
+            If you live in Be'er Sheva, Also have dog, we would love to set up a meeting so our
+            dogs can play together!
+        </p>
     </div>
 </div>
 
